--- a/painel.html
+++ b/painel.html
@@ -239,6 +239,10 @@
                     </tbody>
                 </table>
             </div>
+
+            <div class="chart-container mt-4">
+                <canvas id="clicksEvolutionChart"></canvas>
+            </div>
         </div>
 
         <div id="configuracoes" class="content-section">
