--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="ícone-página2.png" type="image/png">
     <title>PromoShop - As Melhores Ofertas</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
@@ -222,7 +223,7 @@
                 <div class="col-lg-2 col-md-6 mb-4">
                     <h5 class="fw-bold">Links Rápidos</h5>
                     <ul class="list-unstyled footer-links">
-                        <li class="mb-2"><a href="#">Início</a></li>
+                        <li class="mb-2"><a href="#inicio">Início</a></li>
                         <li class="mb-2"><a href="#categorias">Categorias</a></li>
                         <li class="mb-2"><a href="#promocoes">Promoções</a></li>
                         <li class="mb-2"><a href="#">Sobre Nós</a></li>
@@ -264,6 +265,7 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="script-principal.js"></script>
