--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
@@ -73,8 +75,7 @@
             <div class="col-md-8">
                 <div class="search-box">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control form-control-lg"
-                            placeholder="Buscar no PromoShop">
+                        <input type="text" class="form-control form-control-lg" placeholder="Buscar no PromoShop">
                         <button class="btn btn-primary" type="button">
                             <i class="bi bi-search"></i> Buscar
                         </button>
@@ -191,19 +192,28 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
-                    <h2 class="fw-bold mb-4">Participe dos Nossos Grupos</h2>
-                    <p class="mb-4">Receba as melhores promoções diretamente no seu WhatsApp ou Telegram</p>
+                    <h2 class="fw-bold mb-4">Mantenha-se Conectado(a)</h2>
+
                     <div class="row justify-content-center">
-                        <div class="col-md-5">
-                            <a href="#" class="social-btn whatsapp-btn">
-                                <i class="bi bi-whatsapp me-2"></i> Grupo WhatsApp
+
+                        <div class="col-md-4 mb-3">
+                            <a href="[LINK DO SEU GRUPO WHATSAPP]" class="social-btn whatsapp-btn">
+                                <i class="bi bi-whatsapp me-2"></i> WhatsApp
                             </a>
                         </div>
-                        <div class="col-md-5">
-                            <a href="#" class="social-btn telegram-btn">
-                                <i class="bi bi-telegram me-2"></i> Canal Telegram
+
+                        <div class="col-md-4 mb-3">
+                            <a href="[LINK DO SEU PERFIL INSTAGRAM]" class="social-btn instagram-btn">
+                                <i class="bi bi-instagram me-2"></i> Instagram
                             </a>
                         </div>
+
+                        <div class="col-md-4 mb-3">
+                            <a href="mailto:[SEU ENDEREÇO DE E-MAIL]" class="social-btn email-btn">
+                                <i class="bi bi-envelope me-2"></i> E-mail
+                            </a>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -269,6 +279,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="script-principal.js"></script>
-    
+
 </body>
+
 </html>
