--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
-                    <h2 class="fw-bold mb-4">Mantenha-se Conectado(a)</h2>
+                    <h2 class="fw-bold mb-4">Participe dos Nossos Grupos</h2>
+                    <p class="mb-4">Receba as melhores promoções diretamente no seu WhatsApp ou Telegram</p>
 
                     <div class="row justify-content-center">
 
