--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
                     <h2 class="fw-bold mb-4">Participe dos Nossos Grupos</h2>
-                    <p class="mb-4">Receba as melhores promoções diretamente no seu WhatsApp ou Telegram</p>
+                    <p class="mb-4">Receba as melhores promoções diretamente no seu WhatsApp</p>
 
                     <div class="row justify-content-center">
 
