--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <div class="row justify-content-center">
 
                         <div class="col-md-4 mb-3">
-                            <a href="[LINK DO SEU GRUPO WHATSAPP]" class="social-btn whatsapp-btn">
+                            <a href="https://chat.whatsapp.com/KOb237MenwoFdvm3H63R4x" class="social-btn whatsapp-btn">
                                 <i class="bi bi-whatsapp me-2"></i> WhatsApp
                             </a>
                         </div>
