--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="col-md-3 mb-3">
                 <label for="categoria" class="form-label">Categoria</label>
                 <select class="form-select" id="categoria">
-                    <option selected>Todas as categorias</option>
+                    <option selected value="todas">Todas as categorias</option>
                     <option value="tecnologia">Tecnologia</option>
                     <option value="eletronicos">Eletrônicos</option>
                     <option value="casa">Casa e Decoração</option>
@@ -101,7 +101,7 @@
             <div class="col-md-3 mb-3">
                 <label for="loja" class="form-label">Loja</label>
                 <select class="form-select" id="loja">
-                    <option selected>Todas as lojas</option>
+                    <option selected value="todas">Todas as lojas</option>
                     <option value="amazon">Amazon</option>
                     <option value="shopee">Shopee</option>
                     <option value="magalu">Magazine Luiza</option>
