--- a/index.html
+++ b/index.html
@@ -136,41 +136,55 @@
             </div>
         </div>
         <div class="row g-4">
+
             <div class="col-md-3 col-sm-6">
-                <div class="category-card">
-                    <div class="category-icon">
-                        <i class="bi bi-laptop"></i>
+                <a href="#" class="text-decoration-none text-dark"
+                    onclick="aplicarFiltroRapido('tecnologia'); return false;">
+                    <div class="category-card">
+                        <div class="category-icon">
+                            <i class="bi bi-laptop"></i>
+                        </div>
+                        <h5>Tecnologia</h5>
+                        <p class="text-muted small">Smartphones, Tablets, Notebooks</p>
                     </div>
-                    <h5>Tecnologia</h5>
-                    <p class="text-muted small">Smartphones, Tablets, Notebooks</p>
-                </div>
+                </a>
             </div>
+
             <div class="col-md-3 col-sm-6">
-                <div class="category-card">
-                    <div class="category-icon">
-                        <i class="bi bi-tv"></i>
+                <a href="#" class="text-decoration-none text-dark"
+                    onclick="aplicarFiltroRapido('eletronicos'); return false;">
+                    <div class="category-card">
+                        <div class="category-icon">
+                            <i class="bi bi-tv"></i>
+                        </div>
+                        <h5>Eletrônicos</h5>
+                        <p class="text-muted small">TVs, Áudio, Games</p>
                     </div>
-                    <h5>Eletrônicos</h5>
-                    <p class="text-muted small">TVs, Áudio, Games</p>
-                </div>
+                </a>
             </div>
+
             <div class="col-md-3 col-sm-6">
-                <div class="category-card">
-                    <div class="category-icon">
-                        <i class="bi bi-house-door"></i>
+                <a href="#" class="text-decoration-none text-dark" onclick="aplicarFiltroRapido('casa'); return false;">
+                    <div class="category-card">
+                        <div class="category-icon">
+                            <i class="bi bi-house-door"></i>
+                        </div>
+                        <h5>Casa e Decoração</h5>
+                        <p class="text-muted small">Móveis, Utensílios, Decoração</p>
                     </div>
-                    <h5>Casa e Decoração</h5>
-                    <p class="text-muted small">Móveis, Utensílios, Decoração</p>
-                </div>
+                </a>
             </div>
+
             <div class="col-md-3 col-sm-6">
-                <div class="category-card">
-                    <div class="category-icon">
-                        <i class="bi bi-bag"></i>
+                <a href="#" class="text-decoration-none text-dark" onclick="aplicarFiltroRapido('moda'); return false;">
+                    <div class="category-card">
+                        <div class="category-icon">
+                            <i class="bi bi-bag"></i>
+                        </div>
+                        <h5>Moda</h5>
+                        <p class="text-muted small">Roupas, Calçados, Acessórios</p>
                     </div>
-                    <h5>Moda</h5>
-                    <p class="text-muted small">Roupas, Calçados, Acessórios</p>
-                </div>
+                </a>
             </div>
         </div>
     </section>
