--- a/loginadm.html
+++ b/loginadm.html
@@ -17,10 +17,10 @@
                 <h1 class="h3 mb-2">
                     <i class="bi bi-tag-fill me-2"></i>PromoShop
                 </h1>
-                <p class="mb-0">Área do Administrador</p>
+                <p class="mb-0">Faça login para acessar o painel</p>
             </div>
             <div class="login-body">
-                <h2 class="h4 mb-4 text-center">Login do Administrador</h2>
+                <h2 class="h4 mb-4 text-center"><b>Área Administrativa</b></h2>
                 
                 <div class="alert alert-danger d-none" id="login-error" role="alert">
                     <i class="bi bi-exclamation-triangle-fill me-2"></i>
