--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#promocoes">Promoções</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contato.html">Contato</a>
-                    </li>
                 </ul>
                 <div class="d-flex">
                     <a href="loginadm.html" class="btn btn-outline-light">
@@ -266,7 +263,10 @@
                     <h5 class="fw-bold">Contato</h5>
                     <ul class="list-unstyled footer-links">
                         <li class="mb-2">
-                            <i class="bi bi-envelope me-2"></i> contatopromoshop@gmail.com
+                            <a href="mailto:contatopromoshop@gmail.com" class="text-decoration-none text-white">
+                                <i class="bi bi-envelope me-2"></i>
+                                contatopromoshop@gmail.com
+                            </a>
                         </li>
                         <li class="mb-2">
                             <i class="bi bi-whatsapp me-2"></i> (61) 99512-4522
