--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5 class="fw-bold">Lojas Parceiras</h5>
                     <ul class="list-unstyled footer-links">
-                        <li class="mb-2"><a href="#">Amazon</a></li>
-                        <li class="mb-2"><a href="#">Shopee</a></li>
-                        <li class="mb-2"><a href="#">Magazine Luiza</a></li>
-                        <li class="mb-2"><a href="#">Mercado Livre</a></li>
-                        <li class="mb-2"><a href="#">AliExpress</a></li>
+                        <li class="mb-2"><a href="https://www.amazon.com.br/">Amazon</a></li>
+                        <li class="mb-2"><a href="https://shopee.com.br/">Shopee</a></li>
+                        <li class="mb-2"><a href="https://www.magazineluiza.com.br/">Magazine Luiza</a></li>
+                        <li class="mb-2"><a href="https://www.mercadolivre.com.br/">Mercado Livre</a></li>
+                        <li class="mb-2"><a href="https://pt.aliexpress.com/">AliExpress</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mb-4">
