--- a/painel.html
+++ b/painel.html
@@ -284,17 +284,25 @@
 
                 <div class="col-md-6">
                     <div>
-                        <h4 class="mb-3">Personalização do Tema</h4>
-                        <div class="mb-3">
-                            <label for="tema-cor-principal" class="form-label">Cor Principal</label>
-                            <input type="color" class="form-control" id="tema-cor-principal" value="#0d6efd">
+                        <h4 class="mb-3">Gerenciamento de Usuários</h4>
+
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>Nome</th>
+                                        <th>E-mail</th>
+                                        <th class="text-center">Ações</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tabela-administradores">
+                                    <tr>
+                                        <td colspan="3" class="text-center text-muted">Carregando usuários...</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
-                        <div class="mb-3">
-                            <label for="tema-cor-secundaria" class="form-label">Cor Secundária</label>
-                            <input type="color" class="form-control" id="tema-cor-secundaria" value="#0a58ca">
-                        </div>
-                        <button type="button" class="btn btn-primary" id="btn-aplicar-tema">Aplicar Tema</button>
-                        <button type="button" class="btn btn-secondary" id="btn-resetar-tema">Resetar</button>
+
                     </div>
                 </div>
             </div>
@@ -334,7 +342,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.all.min.js"></script>
 
     <script src="script-principal.js"></script>
