--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                         <a class="nav-link active" href="#inicio">Início</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#cupons">Cupons</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#categorias">Categorias</a>
                     </li>
                     <li class="nav-item">
@@ -194,6 +197,20 @@
             </div>
         </div>
         <div class="row g-4" id="promocoes-container">
+        </div>
+    </section>
+
+    <section id="cupons" class="container py-5 bg-light-subtle">
+        <div class="row mb-4">
+            <div class="col-12 text-center">
+                <h2 class="fw-bold"><i class="bi bi-ticket-perforated me-2 text-primary"></i> Cupons de Desconto</h2>
+                <p class="text-muted">Códigos exclusivos para você economizar</p>
+            </div>
+        </div>
+        <div class="row g-3 justify-content-center" id="cupons-container">
+            <div class="col-12 text-center text-muted py-5">
+                Carregando cupons...
+            </div>
         </div>
     </section>
 
