--- a/painel.html
+++ b/painel.html
@@ -277,6 +277,11 @@
                             <label for="cupom-link" class="form-label">Link de Afiliação/Oferta</label>
                             <input type="url" class="form-control" id="cupom-link" required>
                         </div>
+                        <div class="mb-3">
+                            <label for="cupom-validade" class="form-label">Data de Validade</label>
+                            <input type="date" class="form-control" id="cupom-validade" required>
+                        </div>
+                        <div class="d-grid">
 
                         <div class="d-grid">
                             <button type="submit" class="btn btn-primary">Salvar Cupom</button>
