--- a/painel.html
+++ b/painel.html
@@ -297,6 +297,7 @@
                                     <th>Código</th>
                                     <th>Descrição</th>
                                     <th>Loja</th>
+                                    <th>Validade</th>
                                     <th>Ações</th>
                                 </tr>
                             </thead>
