--- a/painel.html
+++ b/painel.html
@@ -164,6 +164,16 @@
                     <textarea class="form-control" id="produto-descricao" name="descricao" rows="3"></textarea>
                 </div>
 
+                <div class="mb-3">
+                    <label for="cupons-relacionados" class="form-label">Cupons Relacionados (Selecione um ou
+                        mais)</label>
+                    <select class="form-select" id="cupons-relacionados" multiple
+                        data-placeholder="Nenhum cupom selecionado">
+                        <option value="">Carregando cupons...</option>
+                    </select>
+                    <small class="text-muted">Use Ctrl/Cmd para selecionar múltiplos cupons.</small>
+                </div>
+
                 <div class="row">
                     <div class="col-md-4 mb-3">
                         <label for="produto-preco-antigo" class="form-label">Preço Antigo (R$)</label>
