--- a/painel.html
+++ b/painel.html
@@ -165,13 +165,10 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="cupons-relacionados" class="form-label">Cupons Relacionados (Selecione um ou
-                        mais)</label>
-                    <select class="form-select" id="cupons-relacionados" multiple
-                        data-placeholder="Nenhum cupom selecionado">
+                    <label for="cupons-relacionados" class="form-label">Cupons Relacionados (Selecione um)</label>
+                    <select class="form-select" id="cupons-relacionados" data-placeholder="Nenhum cupom selecionado">
                         <option value="">Carregando cupons...</option>
                     </select>
-                    <small class="text-muted">Use Ctrl/Cmd para selecionar múltiplos cupons.</small>
                 </div>
 
                 <div class="row">
