--- a/painel.html
+++ b/painel.html
@@ -191,7 +191,7 @@
                             <option value="Magazine Luiza">Magazine Luiza</option>
                             <option value="Mercado Livre">Mercado Livre</option>
                             <option value="AliExpress">AliExpress</option>
-                            <option value="Americanas">Americanas</option>
+                            <option value="Americanas">Netshoes</option>
                         </select>
                     </div>
                 </div>
