--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
                         <li class="mb-2"><a href="https://www.magazineluiza.com.br/">Magazine Luiza</a></li>
                         <li class="mb-2"><a href="https://www.mercadolivre.com.br/">Mercado Livre</a></li>
                         <li class="mb-2"><a href="https://pt.aliexpress.com/">AliExpress</a></li>
+                        <li class="mb-2"><a href="https://www.netshoes.com.br/">Netshoes</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mb-4">
